<resources>

    <string name="app_name">BeSafe</string>
    <string name="title_1">Welcome User</string>
    <string name="title1">Welcome User</string>
    <string name="description_1">We are dedicated towards your safety!</string>
    <string name="title2">Watch Self Defence Videos</string>
    <string name="description_2">Train to Protect yourselves from any Kind of Dangerous situation</string>
    <string name="title3"><b>Add Permissions</b></string>
    <string name="description_3"><b>Permissions are required to make this app work fluently<u>(Do allow all permissions)</u></b></string>
    <string name="go">Ready to go Inside</string>
    <string name="title5">All Set to Go Inside</string>
    <string name="des"><b><u>Just One More thing: Try to keep your Gps Enabled</u></b></string>
    <string name="et_contactno">Contact Number</string>
    <string name="btn_addContact">add contact</string>
    <string name="btn_deleteContact">delete contact</string>
    <string name="empty_number">Empty Number</string>
    <string name="invalid_number">Invalid Number</string>
    <string name="insert_success">Contact Inserted</string>
    <string name="insert_failure">Error While Inserting </string>
    <string name="delete_success">Contact Deleted</string>
    <string name="delete_failure">Error While deleting</string>
    <string name="btn_intent_mainActivity">Main Activity</string>
    <string name="con_msg">Enter numbers you want to notify when in danger!</string>
    <string name="savee">Save</string>
    <string name="mmm"><u> Added Contacts:</u></string>
    <string name="title_activity_main">BeSafe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_youtube">Self Defence Videos</string>
    <string name="bg_service">Start Service</string>
    <string name="cgnum">Change Number</string>
    <string name="btn_dangerText">i am in danger</string>
    <string name="btn_safeText">i am safe now</string>
    <string name="toast_message">message sent</string>
    <string name="gps_network_not_enabled">GPS NOT ENABLED</string>
    <string name="open_location_settings">OPEN LOCATION SETTINGS</string>
    <string name="Cancel">Cancel</string>
    <string name="title9"><b>Tips to use this App</b></string>
    <string name="description_9"><b>Press any Volume key for 3seconds to call your saved contact person</b></string>
    <string name="newtxt">First Contact Displayed would always be used as Emergency Number</string>
    <string name="label_grant_permissions">Grant All Permissons</string>
    <string name="title10"><b>Share Location via SMS</b></string>
    <string name="description_10"><b>Danger Button will share location whenever location gets updated until it is clicked again to stop sharing location. Note: Sharing Location may incur cost depending upon your mobile carrier</b> </string>

</resources>
