<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pg1"
    tools:context=".ContactsSettings">

    <TextView
        android:layout_margin="55dp"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="10dp"
        android:gravity="center"
        android:fontFamily="monospace"
        android:background="@drawable/et_border"
        android:textColor="@color/color_custom_fragment_2"
        android:text="@string/con_msg" />

 <TextView
     android:id="@+id/tv9"
     android:layout_below="@+id/textView4"
     android:text="@string/newtxt"
     android:textColor="@color/color_custom_fragment_2"
     android:textSize="16sp"
     android:textStyle="bold"
     android:layout_margin="5dp"
     android:gravity="center"
     android:background="@drawable/et_border"
     android:padding="10dp"
     android:fontFamily="monospace"
     android:layout_centerHorizontal="true"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />




    <LinearLayout
        android:layout_marginTop="25dp"
        android:id="@+id/l1"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp"
        android:layout_below="@+id/tv9"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/btn_addContact"
        android:layout_below="@+id/textView4"
        android:layout_margin="5dp"
        android:background="@drawable/btn_file"
        android:text="@string/btn_addContact"
        android:layout_width="190dp"
        android:padding="5dp"
        android:textSize="16sp"
        android:layout_height="wrap_content" />
    <Button
        android:padding="5dp"
        android:id="@+id/btn_intent_mainActivity"
        android:layout_below="@+id/btn_addContact"
        android:textSize="16sp"
        android:text="@string/savee"
        android:onClick="gotoNext"
        android:layout_margin="5dp"
        android:background="@drawable/btn_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:id="@+id/vii"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/l1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000"/>

        <TextView
            android:id="@+id/mm"
            android:text="@string/mmm"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:layout_below="@+id/vii"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/list1"
        android:layout_below="@+id/mm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>